--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.1.4",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "hover.css": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
