--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "hover.css": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "redux-persist": "^6.0.0"
