--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
