--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.1.4",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "hover.css": "^2.3.2",
+    "jose": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
