--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.474.0",
+    "@aws-sdk/lib-storage": "^3.474.0",
+    "aws-sdk": "^2.1520.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^4.16.0",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
