--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.1.4",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "hover.css": "^2.3.2",
