--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
