--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
