--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
