--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
+    "react-timeago": "^7.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.3"
   },
