--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.7",
     "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
     "stripe": "^14.10.0"
   },
   "devDependencies": {
