--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "hover.css": "^2.3.2",
     "jose": "^5.1.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
