--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.7",
+    "redis": "^4.6.12",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "stripe": "^14.10.0"
