--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^16.3.1",
     "hover.css": "^2.3.2",
     "jose": "^5.1.3",
+    "prettier": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
