--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-scrollbars-custom": "^4.1.1",
     "react-spinners": "^0.13.8",
     "react-timeago": "^7.2.0",
     "redux-persist": "^6.0.0",
